{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 13,
  "lineage": "ad1e0151-0292-1662-9c7a-8fe53d29e757",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-082d6d6af65f7b211",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng48-Daniel-2-tier-architecture - IG"
            },
            "vpc_id": "vpc-087ae2ddc235b3348"
          },
          "dependencies": [
            "aws_vpc.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_route_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06c58b0a59ed449c9",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Eng48-Daniel-2-tier-architecture - route table private"
            },
            "vpc_id": "vpc-087ae2ddc235b3348"
          },
          "dependencies": [
            "aws_vpc.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_route_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0517bcf6ca0a610b9",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-082d6d6af65f7b211",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Eng48-Daniel-2-tier-architecture - route table public"
            },
            "vpc_id": "vpc-087ae2ddc235b3348"
          },
          "dependencies": [
            "aws_internet_gateway.vpc_gw",
            "aws_vpc.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_assoc_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0676ef1313f720797",
            "route_table_id": "rtb-06c58b0a59ed449c9",
            "subnet_id": "subnet-0b85a6e74f3c7e18b"
          },
          "dependencies": [
            "aws_route_table.vpc_route_private",
            "aws_subnet.vpc_private_subnet",
            "aws_vpc.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_assoc_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aac9cc5314f36d25",
            "route_table_id": "rtb-0517bcf6ca0a610b9",
            "subnet_id": "subnet-0f3a82f5fd45ec44d"
          },
          "dependencies": [
            "aws_internet_gateway.vpc_gw",
            "aws_route_table.vpc_route_public",
            "aws_subnet.vpc_public_subnet",
            "aws_vpc.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_private_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0b85a6e74f3c7e18b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b85a6e74f3c7e18b",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng48-Daniel-2-tier-architecture"
            },
            "vpc_id": "vpc-087ae2ddc235b3348"
          },
          "dependencies": [
            "aws_vpc.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0f3a82f5fd45ec44d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0f3a82f5fd45ec44d",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng48-Daniel-2-tier-architecture"
            },
            "vpc_id": "vpc-087ae2ddc235b3348"
          },
          "dependencies": [
            "aws_vpc.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "two_tier_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-087ae2ddc235b3348",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03400061467a4be68",
            "default_route_table_id": "rtb-085642325a357cd21",
            "default_security_group_id": "sg-00c777b0125d2ad1b",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-087ae2ddc235b3348",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-085642325a357cd21",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng48-Daniel-2-tier-architecture"
            }
          }
        }
      ]
    }
  ]
}